<resources>
    <string name="restaurant_name">Early Bird Restaurant</string>
    <string name="app_name">SylvanCombinedUI</string>
    <string name="home_item_title">Home</string>
    <string name="create_item_title">Create</string>
    <string name="edit_item_title">Edit</string>
    <string name="queue_item_title">Queue</string>
    <string name="inventory_item_title">Inventory</string>
    <string name="user_item_title">User</string>
    <string name="user_profile_item_title">User Profile</string>
    <string name ="bluetooth_item_title">Bluetooth</string>
    <string name="logout_item_title">Logout</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="hamburger_name">Hamburger</string>
    <string name = "cheeseburger_name">Cheeseburger</string>
    <string name = "bacon_cheese_burger_name">Bacon Cheese Burger</string>
    <string name = "double_hamburger_name">Double Hamburger</string>
    <string name = "double_cheeseburger_name">Double Cheeseburger</string>
    <string name = "double_bacon_cheese_burger_name">Double Bac/Cheese Burger</string>
    <string name = "bigfoot_burger_name">Bigfoot Burger</string>
    <string name = "bbq_bacon_cheese_burger_name">BBQ Bacon Cheese Burger</string>
    <string name = "chicken_burger_name">Chicken Burger</string>
    <string name = "fish_burger_name">Fish Burger</string>
    <string name = "veggie_burger_name">Veggie Burger</string>
    <string name = "kids_meal_name">Kids Meal</string>
    <string name = "beef_dog_name">All Beef Dog</string>
    <string name = "polish_dog_name">Polish Dog</string>
    <string name = "chili_bowl_name">Chili Bowl</string>
    <string name = "chili_fry_name">Chili Fry</string>
    <string name = "chili_dog_name">Chili Dog</string>
    <string name = "chili_burger_name">Chili Burger</string>
    <string name = "chicken_strip_basket_name">Chicken Strip Basket</string>
    <string name = "fish_basket_name">Fish Basket</string>
    <string name = "shrimp_basket_name">Shrimp Basket</string>
    <string name = "clam_basket_name">Clam Basket</string>
    <string name = "taxable">Y</string>
    <string name = "non_taxable">N</string>
</resources>