<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home_item_title"/>
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/create_item_title" />
        <item
            android:id="@+id/nav_queue"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/queue_item_title" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_baseline_inventory_24"
            android:title="@string/inventory_item_title" />
    </group>

    <item android:title="@string/user_item_title">
        <menu>
            <item
                android:id="@+id/nav_bluetooth"
                android:icon="@drawable/ic_baseline_bluetooth_24"
                android:title="@string/bluetooth_item_title" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/logout_item_title" />
        </menu>
    </item>

</menu>


<!--item
android:id="@+id/nav_edit"
android:icon="@drawable/ic_baseline_edit_24"
android:title="@string/edit_item_title"
<item
                android:id="@+id/nav_user_profile"
                android:icon="@drawable/ic_baseline_user_profile_24"
                android:title="@string/user_profile_item_title" />
                -->